--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header id="header">
-        <h1><img src="/media/37676.png" alt="trumpet logo">Original Trombones</h1>
+        <h1><img src="media/37676.png" alt="trumpet logo">Original Trombones</h1>
         <nav id="nav-bar">
             <ul>
                 <li><a href="#feature" class="nav-link">Features</a></li>
